# omuse

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .readthedocs.yaml  Makefile  NOTICE  README.md  Singularity  Singularity8  dijkstra2005.py  generate_ci.sh  interface.f90  interface.py  pyproject.toml  read_grid.py  reqs-rtd.txt  setup.py  test_adcirc.py  test_bc.py  test_qgmodel.py  viebahn2014.py
community/cdo/src/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  OPERATORS  README  acinclude.m4  aclocal.m4  cdo.settings  cdo.settings.in  cdo.spec  cdo.spec.in  config.status  configure  configure.ac  libtool
community/cdo/src/config/: default
community/cdo/src/contrib/: Makefile  Makefile.am  Makefile.in  cdoCompletion.bash  cdoCompletion.tcsh  cdoCompletion.zsh  makecompl.rb
community/cdo/src/libcdi/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  cdi.settings  cdi.settings.in  config.lt  config.status  configure  configure.ac  libtool
community/cdo/src/libcdi/app/: Makefile  Makefile.am  Makefile.in  cdi.c  createtable.c
community/cdo/src/libcdi/config/: default  interface.rb
community/cdo/src/libcdi/examples/: Makefile  Makefile.am  Makefile.in  README  cdi_copy.c  cdi_read.c  cdi_read_f2003.f90  cdi_write.c  cdi_write_ens.c  cdi_write_f2003.f90  cdi_write_hybrid.c
community/cdo/src/libcdi/interfaces/: CdiInfo.cpp  Makefile  Makefile.am  Makefile.in  cdi.cpp  cdi.hpp  cdilib.i  cdiobj.i
community/cdo/src/libcdi/m4/: ac_lang_program_fortran.m4  acx_assert_lang_is_fortran_variant.m4  acx_c_package.m4  acx_cfortran_flags.m4  acx_check_cfortran.m4  acx_check_strptr_convert.m4  acx_execinfo.m4  acx_fortran_package.m4  acx_lang_c_check_include.m4  acx_lang_check_include.m4  acx_lang_fortran_check_include.m4  acx_lang_other_suffix_conftest.m4  acx_lang_package.m4  acx_lt_problems.m4  acx_option_search_libs.m4  acx_options.m4  acx_sl_fc_mod_path_flag.m4  acx_sl_mod_suffix.m4  asx_tr_arg.m4  asx_unset.m4  kpse_libtool.m4  libtool.m4  starlink_fpp.m4
community/cdo/src/libcdi/src/: Makefile  Makefile.am  Makefile.in  basetime.c  basetime.h  binary.c  binary.h  calendar.c  calendar.h  cdf.c  cdf.h  cdf_int.c  cdf_int.h  cdi.h  cdi.inc  cdiFortran.c  cdi_cksum.c  cdi_cksum.h  cdi_error.c  cdi_int.c  cdi_int.h  cdi_limits.h  cdi_util.c  cdilib.c  cdipio.h  cdipio.inc  cdipioFortran.c  cfortran.doc  cfortran.h  cgribex.h  cgribexlib.c  cksum.c  cksum.h  config.h  config.h.in  create_uuid.h  datetime.h  dmemory.c  dmemory.h  dtypes.h  (+109 more)
community/cdo/src/libcdi/tables/: gen_tableheaderfile  gen_tableheaderfile.in
community/cdo/src/libcdi/tests/: Makefile  Makefile.am  Makefile.in  cksum_read.c  cksum_verify.c  cksum_write.c  cksum_write_chunk.c  deco2d_model.c  ensure_array_size.c  ensure_array_size.h  pio_cksum_asynch  pio_cksum_asynch.in  pio_cksum_cdf  pio_cksum_cdf.in  pio_cksum_fpguard  pio_cksum_fpguard.in  pio_cksum_mpinonb  pio_cksum_mpinonb.in  pio_cksum_writer  pio_cksum_writer.in  pio_write.c  pio_write.h  pio_write_deco2d_run  pio_write_deco2d_run.in  pio_write_run  pio_write_run.in  simple_model.c  simple_model_helper.c  simple_model_helper.h  stream_cksum.c  stream_cksum.h  test_cdf_read.c  test_cdf_transformation  test_cdf_transformation.in  test_cdf_write.c  test_chunk_cksum  test_chunk_cksum.in  test_cksum_extra  test_cksum_extra.in  test_cksum_grib  (+19 more)
community/cdo/src/libcdi/util/: serialrun  serialrun.in  sunf95preproc-wrapper  sxpreproc-wrapper  xlfpreproc-wrapper
community/cdo/src/m4/: ._ax_pthread.m4  acx_options.m4
community/cdo/src/src/: Adisit.c  Afterburner.c  Arith.c  Arithc.c  Arithdays.c  Arithlat.c  CDIread.c  CDItest.c  CDIwrite.c  Cat.c  CdoMagicsMapper.c  CdoMagicsMapper.h  Change.c  Change_e5slm.c  Cloudlayer.c  Collgrid.c  Command.c  Comp.c  Compc.c  Complextorect.c  Cond.c  Cond2.c  Condc.c  Consecstat.c  Copy.c  Deltime.c  Derivepar.c  Detrend.c  Diff.c  Distgrid.c  Duplicate.c  EOFs.c  EcaIndices.c  Echam5ini.c  Enlarge.c  Enlargegrid.c  Ensstat.c  Ensstat3.c  Ensval.c  Eof3d.c  (+297 more)
community/cdo/src/src/.deps/: cdo-Adisit.Po  cdo-Afterburner.Po  cdo-Arith.Po  cdo-Arithc.Po  cdo-Arithdays.Po  cdo-Arithlat.Po  cdo-CDIread.Po  cdo-CDItest.Po  cdo-CDIwrite.Po  cdo-Cat.Po  cdo-Change.Po  cdo-Change_e5slm.Po  cdo-Cloudlayer.Po  cdo-Collgrid.Po  cdo-Command.Po  cdo-Comp.Po  cdo-Compc.Po  cdo-Complextorect.Po  cdo-Cond.Po  cdo-Cond2.Po  cdo-Condc.Po  cdo-Consecstat.Po  cdo-Copy.Po  cdo-Deltime.Po  cdo-Derivepar.Po  cdo-Detrend.Po  cdo-Diff.Po  cdo-Distgrid.Po  cdo-Duplicate.Po  cdo-EOFs.Po  cdo-EcaIndices.Po  cdo-Echam5ini.Po  cdo-Enlarge.Po  cdo-Enlargegrid.Po  cdo-Ensstat.Po  cdo-Ensstat3.Po  cdo-Ensval.Po  cdo-Eof3d.Po  cdo-Eofcoeff.Po  cdo-Eofcoeff3d.Po  (+222 more)
community/cdo/src/src/clipping/: area.c  area.h  clipping.c  clipping.h  dep_list.h  ensure_array_size.c  ensure_array_size.h  geometry.h  grid.h  grid_cell.c  grid_cell.h  intersection.c  points.h  utils.c  utils.h
community/cdo/src/test/: Afterburner.test  Afterburner.test.in  Arith.test  Arith.test.in  Cat.test  Cat.test.in  Copy_netcdf.test  Copy_netcdf.test.in  Detrend.test  Detrend.test.in  File.test  File.test.in  Genweights.test  Genweights.test.in  Gradsdes.test  Gradsdes.test.in  Gridarea.test  Gridarea.test.in  Makefile  Makefile.am  Makefile.in  README  Read_grib.test  Read_grib.test.in  Read_netcdf.test  Read_netcdf.test.in  Remap.test  Remap.test.in  Select.test  Select.test.in  Spectral.test  Spectral.test.in  Timstat.test  Timstat.test.in  Vertint.test  Vertint.test.in  wildcard.test  wildcard.test.in
community/cdo/src/test/data/: ._netcdf_testfile01.nc  Makefile  Makefile.am  Makefile.in  bathy4.grb  detrend_data  detrend_ref  file_F32_srv_ref  gp2sp_ref  gp2spl_ref  grib_testfile01.grb  grib_testfile01_info_ref  grib_testfile01_sinfo_ref  grib_testfile02.grb  grib_testfile02_info_ref  grib_testfile02_sinfo_ref  hl_l19.grb  ml2pl_ref  n16_bic_ref  n16_bil_ref  n16_dis_ref  n16_laf_ref  n16_nn_ref  n16_ycon_ref  n32_bic_ref  n32_bil_ref  n32_con_ref  n32_dis_ref  n32_laf_ref  n32_nn_ref  netcdf_testfile02.nc  (+26 more)
(+521 files in other folders)
